--- a/package.json
+++ b/package.json
@@ -14,12 +14,15 @@
   "author": "rafaelpbar",
   "license": "",
   "dependencies": {
+    "@mysql/xdevapi": "8.0.25",
     "body-parser": "^1.19.0",
     "cookie-parser": "^1.4.5",
     "ejs": "^3.1.6",
     "express": "^4.17.1",
+    "jsonwebtoken": "^8.5.1",
     "mysql2": "^2.2.5",
     "nodemon": "^2.0.7",
+    "save": "^2.4.0",
     "uuid": "^8.1.0"
   },
   "devDependencies": {
